# PRC-neural-networks

./: .gitignore  architecture.py  layers.py  pyproject.toml  sandbox.py
src/: architecture.py  layers.py  train.py
