[project]
name = "prc-neural-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "architecture>=0.5.50",
    "marimo>=0.23.1",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "train>=0.0.5",
]
